--- a/src/scss/scss_basement/pages/alternate-ways.scss
+++ b/src/scss/scss_basement/pages/alternate-ways.scss
@@ -1,4 +1,4 @@
-@import './common';
+@import './common.scss';
 
 .alternate-ways{
     &_header{
@@ -7,11 +7,13 @@
         flex-wrap: nowrap;
         // @include testing-border-1;
         // margin-bottom: 2rem;
+
         
         img{
             height: calc(100% - 15vh);
             width: 100%;
             object-fit: cover;
+            // opacity: 0;
         }
 
         .heading-wrapper{
@@ -22,6 +24,7 @@
 
             h2{
                 @include font-heading-1;
+                // opacity: 0;
             }
 
         }
@@ -49,7 +52,7 @@
                 width: 60%;
                 height: 80svh;
                 object-fit: cover;
-
+               
                 @media screen and (max-width: 1000px) {
                     height: 40svh;
                     width: 100%;
