workin on alternate ways animations

--- a/src/scss/scss_basement/pages/alternate-ways.scss
+++ b/src/scss/scss_basement/pages/alternate-ways.scss
@@ -7,6 +7,7 @@
         flex-wrap: nowrap;
         // @include testing-border-1;
         // margin-bottom: 2rem;
+        // overflow: hidden;
 
         
         img{
