--- a/src/scss/scss_basement/pages/services.scss
+++ b/src/scss/scss_basement/pages/services.scss
@@ -106,6 +106,10 @@
 
         &_content.active{
             display: block; 
+
+            figure{
+                display: block;
+            }
         }
 
         img{
