working on team animations

--- a/src/scss/scss_basement/viewport-animations/viewport-animations.scss
+++ b/src/scss/scss_basement/viewport-animations/viewport-animations.scss
@@ -175,6 +175,26 @@
         }
     }
 
+    &.windblade-img-duo-left{
+        transform: translateX(50%) !important;
+        z-index: 2;
+
+        &.in-right-place{
+            transform: rotate(-5deg) translate(3rem) !important;
+        }
+    }
+
+    &.windblade-img-duo-right{
+        transform: translateX(-50%);
+        z-index: 1;
+        opacity: 0;
+
+        &.in-right-place{
+            transform: translateX(0%);
+            opacity: 1;
+        }
+    }
+
 
     // 
     // OPACITY
@@ -274,7 +294,7 @@
     // FADE 
 
     &.fade-up{
-        opacity: 0;
+        opacity: 0 ;
         transform: translateY(5rem);
 
         &.in-right-place{
