--- a/src/scss/scss_basement/pages/team.scss
+++ b/src/scss/scss_basement/pages/team.scss
@@ -61,11 +61,16 @@
                 }
 
                 &:first-of-type{
-                    transform: rotate(-5deg) translate(3rem);
+                    // transform: rotate(-5deg) translate(3rem);
+                    transform: translateX(50%);
 
                     @media screen and (max-width: 800px) {
                         transform: initial;
                     }
+                }
+
+                &:last-of-type{
+                    transform: translateX(-50%);
                 }
             }
         }
@@ -87,6 +92,7 @@
                 width: 30rem;
                 // margin-top: 8rem;
                 transform: translateY(5rem);
+                opacity: 0;
 
                 @media screen and (min-width: 1650px) {
                     width: 40rem;
