--- a/src/scss/scss_basement/pages/common.scss
+++ b/src/scss/scss_basement/pages/common.scss
@@ -27,6 +27,15 @@ body{
     overflow-x: hidden;
 }
 
+h1, h2, h3, h4, h5 {
+    line-height: 120%;
+}
+
+p, span, li, a{
+    line-height: 150%;
+    font-size: 1.1rem;
+}
+
 //
 // 'HEADER'
 //
