--- a/src/scss/scss_basement/pages/alternate-ways.scss
+++ b/src/scss/scss_basement/pages/alternate-ways.scss
@@ -445,6 +445,7 @@
 
                 dt{
                     width: 30%;
+                    min-width: 15rem;
                 }
 
                 dd{
