--- a/src/scss/scss_basement/pages/office.scss
+++ b/src/scss/scss_basement/pages/office.scss
@@ -133,7 +133,9 @@
                     }
 
                     @media screen and (max-width: 450px) {
-                        width: 2.5rem
+                        width: 2.5rem;
+                        margin-top: 0;
+                        margin-bottom: 0;
                     }
                 }
 
