--- a/src/scss/scss_basement/pages/e-medication.scss
+++ b/src/scss/scss_basement/pages/e-medication.scss
@@ -3,7 +3,7 @@
 .e-medication{
     // min-height: calc(100svh - 5rem);
     @include flex-row-center;
-
+    align-items: stretch;
     
     @media screen and (max-width: 1000px) {
        flex-direction: column;
@@ -14,7 +14,7 @@
     &_right-side{
         width: 45%;
         flex-grow: 1;
-        height: calc(100svh - 5rem);
+        // height: calc(100svh - 5rem);
         min-height: calc(100svh - 5rem);
         // @include testing-border-2;
 
@@ -49,7 +49,10 @@
         h2{
             @include font-heading-1;
             text-align: center;
-           margin-top: 2rem;
+        //    margin-top: 2rem;
+
+           margin-top: 3rem;
+           margin-bottom: 1rem;
 
             @media screen and (max-width: 1000px) {
                 margin: 1rem;
