--- a/src/scss/scss_basement/pages/physical-therapy.scss
+++ b/src/scss/scss_basement/pages/physical-therapy.scss
@@ -174,6 +174,10 @@
                 align-self: flex-end;
                 position: relative;
 
+                li{
+                    margin: .8rem auto;
+                }
+
                 @media screen and (max-width: 650px) {
                     width: 80%;
                 }
