change the marked pagination link

--- a/src/scss/scss_basement/pages/blog.scss
+++ b/src/scss/scss_basement/pages/blog.scss
@@ -266,7 +266,13 @@
             //     cursor: default;
             // }
 
-            .last-pagination-elem{
+            // .last-pagination-elem{
+            //     background: rgba(0,0,0, 0.8);
+            //     padding: 0.5rem;
+            //     color: white;
+            // }
+
+            .current-page{
                 background: rgba(0,0,0, 0.8);
                 padding: 0.5rem;
                 color: white;
