--- a/src/scss/scss_basement/pages/home.scss
+++ b/src/scss/scss_basement/pages/home.scss
@@ -26,6 +26,14 @@
             height: calc(55vh);
             position: relative;
 
+            @media screen and (max-width: 1500px) {
+                background: url(../graphics/pics/girl-1500.webp) center center / cover no-repeat;
+            }
+
+            @media screen and (max-width: 750px) {
+                background: url(../graphics/pics/girl-750.webp) center center / cover no-repeat;
+            }
+
             // &::before,
             // &::after{
             //     position; absolute;
@@ -439,6 +447,13 @@
                 @media screen and (max-width: 1184px) {
                     width: 100%;
                     border-radius: 0;
+                    margin: 0;
+                }
+            }
+
+            & picture{
+                @media screen and (max-width: 1184px) {
+                    width: 100%;
                 }
             }
 
