--- a/src/scss/scss_basement/pages/alternate-ways.scss
+++ b/src/scss/scss_basement/pages/alternate-ways.scss
@@ -5,16 +5,17 @@
         height: calc(100svh - 5rem);
         @include flex-column-center;
         flex-wrap: nowrap;
-        // @include testing-border-1;
-        // margin-bottom: 2rem;
-        // overflow: hidden;
-
-        
-        img{
+ 
+        picture{
             height: calc(100% - 15vh);
             width: 100%;
-            object-fit: cover;
-            // opacity: 0;
+
+            img{
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+                // opacity: 0;
+            }
         }
 
         .heading-wrapper{
@@ -49,14 +50,19 @@
                 flex-direction: column;
             }
 
-            img{
+            picture{
                 width: 60%;
                 height: 80svh;
-                object-fit: cover;
-               
+                
                 @media screen and (max-width: 1000px) {
                     height: 40svh;
                     width: 100%;
+                }
+
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
                 }
             }
 
@@ -88,12 +94,18 @@
                 margin-top: 5rem;
             }
 
-            img{
+            picture{
                 width: 100%;
                 height: 50svh;
                 object-fit: cover;
                 margin: auto;
                 display: block;
+
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
             }
 
             .heading-markup{
@@ -245,10 +257,9 @@
                 margin: auto;
             }
 
-            img{
+            picture{
                 width: 90%;
                 height: 90%;
-                object-fit: cover;
                 border-radius: 5rem 2rem;
                 max-height: 35rem;
 
@@ -257,6 +268,12 @@
                     border-radius: 0;
                     height: 40svh;
                 }
+            }
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
             }
         }
 
@@ -364,10 +381,16 @@
                 height: 78svh;
             }
 
-            img{
+            picture{
                 height: 70svh;
                 width: 100%;
-                object-fit: cover;
+                display: block;
+                
+                img{
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                }
             }
 
             h3{
