--- a/src/scss/scss_basement/pages/physical-therapy.scss
+++ b/src/scss/scss_basement/pages/physical-therapy.scss
@@ -12,12 +12,17 @@
         &_img{
             width: 100%;
             height: 75vh;
-            object-fit: cover;
-            object-position: center;
-            // @include gray-image;
+            display: block;
 
             @media screen and (max-width: 1000px) {
                 height: 74svh;
+            }
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center;  
             }
         }
 
@@ -86,12 +91,12 @@
         // TRAINER
         //
         &.trainer{
-            img{
+            picture{
+                display: block;
                 width: 20rem;
                 height: 20rem;
-                object-fit: cover;
                 border-radius: 50%;
-                // @include gray-image;
+                overflow: hidden;
 
                 @media screen and (max-width: 1115px) {
                     // order: 2;
@@ -109,6 +114,12 @@
                 @media screen and (max-width: 420px) {
                     width: 15rem;
                     height: 15rem;
+                }
+
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
                 }
             }
 
@@ -195,10 +206,10 @@
                 }
             }
 
-            img{
+            picture{
                 width: 30%;
                 border-radius: 5rem 1rem;
-                // @include gray-image;
+                overflow: hidden;
 
                 @media screen and (max-width: 1115px) {
                     width: 80%;
@@ -212,6 +223,14 @@
                     width: 100%
                 }
 
+                img{
+                    width: 100%;
+                    height: 100%;
+
+                    @media screen and (max-width: 1115px) {
+                        object-fit: cover;
+                    }
+                }
             }
 
             &:last-of-type{
