--- a/src/scss/scss_basement/pages/blog.scss
+++ b/src/scss/scss_basement/pages/blog.scss
@@ -19,15 +19,20 @@
             margin-bottom: 0;
         }
     
-
-        img{
+        picture{
             width: 100%;
             height: 75vh;
-            object-fit: cover;
-            object-position: top;
+            display: block;
 
             @media screen and (max-width: 1000px) {
                 height: 74svh;
+            }
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: top;
             }
         }
 
