--- a/src/scss/scss_basement/pages/news.scss
+++ b/src/scss/scss_basement/pages/news.scss
@@ -4,14 +4,20 @@
     padding-bottom: 5rem;
 
     &_header{
-        img{
+        picture{
             width: 100%;
             height: 75vh;
-            object-fit: cover;
-            object-position: center;
+            display: block;
 
             @media screen and (max-width: 1000px) {
                 height: 74svh;
+            }
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center;
             }
         }
 
