--- a/src/scss/scss_basement/pages/home.scss
+++ b/src/scss/scss_basement/pages/home.scss
@@ -113,7 +113,7 @@
             position: absolute;
             top: -2rem;
             opacity: 0.7;
-            transition: all .2s;
+            transition: all 1s;
         }
 
 
