--- a/src/scss/scss_basement/pages/home.scss
+++ b/src/scss/scss_basement/pages/home.scss
@@ -207,11 +207,16 @@
                    position: relative;
                 }
 
-                img{
+                picture{
                     width: 100%;
                     height: 12rem;
-                    object-fit: cover;
                     display: block;
+
+                    img{
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
                 }
     
                 h3{
@@ -331,25 +336,23 @@
                 }
             }
 
-            & img{
-                object-fit: cover;
-
+            & picture{
                 width: 20rem;
                 height: 20rem;
-                object-fit: cover;
                 border-radius: 50%;
                 margin: auto 2rem;
+                overflow: hidden;
 
                 @media screen and (max-width: 1184px) {
                     width: 100%;
                     border-radius: 0;
                     margin: 0;
                 }
-            }
 
-            & picture{
-                @media screen and (max-width: 1184px) {
+                img{
                     width: 100%;
+                    height: 100%;
+                    object-fit: cover;
                 }
             }
 
